2017-06-13  Per Bothner  <per@bothner.com>

	* ReaderExtendedLiteral.java (readContent): Use LispReader.eofError.
	This throws an exception, which is what the JLine code expects.
	Thus multi-line literals are handled.

2017-06-08  Per Bothner  <per@bothner.com>

	* LispReader.java (readObject): Always wrap top-level in begin.
	(makePair, setCar): New methods, to set end-position, too.
	* ReaderParens.java: Also record end-positions.

2017-05-23  Per Bothner  <per@bothner.com>

	* ReaderXmlElement.java (readElementConstructor): Better error recovery.
	Skip past malformed or unquoted atribute values.

2017-05-03  Per Bothner  <per@bothner.com>

	* LispLanguage.java (getTypeFor): Add missing semicolon.
	Was only a problem if JAVA7 wasn't selected.

2017-02-03  Per Bothner  <per@bothner.com>

	* LangObjType.java: (bitvectorType, c16vectorType): New static.
	Also, implement casts from Java array to uniform vector types,

2017-01-20  Per Bothner  <per@bothner.com>

	* LangPrimType.java (isTrueType): New special value.
	* LispReader.java (readSpecial): Handle #!if.

2017-01-06  Per Bothner  <per@bothner.com>

	* LispReader.java (symbolReadCase): New ThreadLocation.

2016-12-04  Per Bothner  <per@bothner.com>

	* LangObjType.java (istringType, istringType): New Types.
	* LispLanguage.java (getTypeFor): Map java.lang.String to
	LangObjType.jstringType rather than Type.toStringType.
	Also handle arrays.

2016-12-03  Per Bothner  <per@bothner.com>

	* LangObjType.java (isCompatibleWithValue): Use Type.isSame.
	For 'dynamic' only return 2 if if incoming type is non-primitive.
	* LangPrimType.java (isCompatibleWithValue): Change return value
	for converting anything to boolean.
	* SeqSizeType.java (Type.isCompatibleWithValue): Add Type.isSame test.

2016-09-08  Per Bothner  <per@bothner.com>

	* LispLanguage.java (parse): Fix handling of unquoted literal #!eof.

2016-09-02  Per Bothner  <per@bothner.com>

	* LispReader.java (readGeneralArray): Allow specifying only