@@ -1,3 +1,7 @@
+2017-07-20  Per Bothner  <per@bothner.com>
+
+	* LangObjType.java (coercioMethod): Make more robust.
+
 2017-06-13  Per Bothner  <per@bothner.com>
 
 	* ReaderExtendedLiteral.java (readContent): Use LispReader.eofError.
